--- a/INSTALL
+++ b/INSTALL
@@ -82,11 +82,16 @@ INSTALLATION
             CONFFILE => Absolute path to the SquidGuard configuration file
             DBHOME => Absolute path to the SquidGuard DB directory
             LOGDIR => Absolute path to the SquidGuard log directory
-            WWWDIR => Absolute path to the SquidGuard Manager base installation directory
-            CGIDIR => Relative path from WWWDIR to install CGI script. Default equals WWWDIR
-            HTMLDIR =>  Relative path from WWWDIR to install css, js and image files. Default equals WWWDIR
-            LANGDIR => Translation language to use (en_US or fr_FR). Default: en_USœ
-            BASEURL => Path part of the base url to access SquidGuard Manager Web GUI. Default: /squidguardmgr
+            WWWDIR => Absolute path to the SquidGuard Manager base installation
+                      directory
+            CGIDIR => Relative path from WWWDIR to install CGI script.
+                      Default equals WWWDIR
+            HTMLDIR => Relative path from WWWDIR to install css, js and
+                       image files. Default equals WWWDIR
+            LANGDIR => Translation language to use (en_US or fr_FR).
+                       Default: en_US
+            BASEURL => Path part of the base url to access SquidGuard
+                       Manager Web GUI. Default: /squidguardmgr
             SQUIDUSR => User running Squid
             SQUIDGRP => Group running Squid
             SQUIDCLAMAV => Absolute path to the squidclamav binary (v5.x only)
@@ -104,12 +109,16 @@ INSTALLATION
             CONFFILE=/usr/local/etc/squidguard.conf \
             DBHOME=/usr/local/squidguard/db \
             LOGDIR=/usr/local/logs/squidguard \
-            WWWDIR=/usr/local/apache CGIDIR=cgi-bin/admin HTMLDIR=htdocs/admin \
-            LANGDIR=fr_FR BASEURL=/admin SQUIDUSR=squid SQUIDGRP=squid \
+            WWWDIR=/usr/local/apache \
+            CGIDIR=cgi-bin/admin HTMLDIR=htdocs/admin \
+            LANGDIR=fr_FR BASEURL=/admin \
+            SQUIDUSR=squid SQUIDGRP=squid \
             SQUIDCLAMAV=/usr/local/bin/squidclamav \
             SQUIDCLAMAVCONF=/etc/squidclamav.conf
 
-            make && make install
+            make
+            su
+            make install
 
     This will install SquidGuard Manager CGI squidguardmgr.cgi,
     squidguardmgr.conf, squid_wrapper and all language files under
@@ -148,11 +157,11 @@ INSTALLATION
             cd squid_wrapper/
             cc -o /path/squidguardmgr/cgi/squid_wrapper squid_wrapper.c
             chown root.root /path/squidguardmgr/cgi/squid_wrapper
+            chmod 755 /path/squidguardmgr/cgi/squid_wrapper
             chmod u+s /path/squidguardmgr/cgi/squid_wrapper
 
 CONFIGURATION
-
-See README file.
+    See README file.
 
 AUTHORS
     Gilles Darold <gilles @nospam@ darold.net>
