Doc and note changes (integrated)
Repetitive changes confusing... This is a tidy-up commit.

--- a/README
+++ b/README
@@ -23,18 +23,19 @@ FEATURES
 
     Sources
         Use this interface to define sources like users, groups, Ip
-        addresses, range of Ip addresses or networks to apply policies on
-        them. These can be issued from a list, a file, an ldap query, a
-        mysql query or a command line utility.
+        addresses, range of Ip addresses or networks to apply policies on.
+        These can be issued from a list, a file, an ldap query, a mysql
+        query or a command line utility.
 
     Url rewriting
-        This interface allows you to define as many URL rewriting rules as
-        you want. They will be applied by SquidGuard following regex pattern
-        matching.
+        This interface allows you to define URL rewriting groups, each
+        consists of one or more Sed style substitution rules. They can be
+        applied to source groups in ACLs menu.
 
     Filters
-        This interface allows you to defined URL destination groups based on
-        predefined lists of domain, url or regexp expressions.
+        Destination Groups filter selector in other words. In this interface
+        you can shape each group by selecting a list for domain, url or
+        regexp filter from those you defined in Manage Lists interface.
 
     ACLs
         This is the central place where you define what source objects
@@ -44,12 +45,12 @@ FEATURES
         This interface allows you to see the SquidGuard configuration file.
 
     Manage Lists
-        This interface allows you to manage all lists by editing them fully
-        or adding, removing and searching entries.
+        This interface allows you to build blocklists for each destination
+        group. You can edit a whole list or add/remove individual entries.
 
-    Logs
-        This interface allow you to consult different log files you have
-        defined in the SquidGuard object configuration.
+    View logs
+        This menu allows you to consult all log files in the log directory
+        you'd defined in the SquidGuard global configuration.
 
     SquidClamav
         This link leads you to the GUI interface to administer SquidClamav
@@ -58,8 +59,8 @@ FEATURES
 
     Restart Squid
         This link allows you to 'reconfigure' or quick-restart Squid to make
-        it recognize SquidGuard and/or SquidClamav configuration changes you
-        made.
+        it recognize the changes you made to SquidGuard and/or SquidClamav
+        configuration.
 
   SquidClamav Manager GUI interfaces
     Since release 1.4 SquidClamav Manager is able to manage both SquidClamav
