--- a/README
+++ b/README
@@ -105,10 +105,10 @@ REQUIREMENT
 
     You need to run this CGI script using Apache HTTP server. And the httpd
     daemon must be run as uid and gid holding SquidGuard (most of the time
-    this is squid cache effective user/group). This is to allow SquidGuard
-    Manager to read and write into the configuration files to manage
-    blocklists and acls. If you use SquidClamav, it must be run under the
-    same user too.
+    this is Squid cache effective user/group). This allows SquidGuard
+    Manager to read and write the configuration files to manage blocklists
+    and acls. If you use SquidClamav, it must be run under the same user
+    too.
 
     SquidGuard Manager uses some system commands to manage blocklists and
     log files. Your system must have the following binaries installed: diff,
@@ -119,11 +119,11 @@ INSTALLATION
     that installer script can put files with appropriate permission.
 
   Prepare your system
-    SquidGuard Manager need to have read/write access onto SquidGuard
+    SquidGuard Manager needs to have read/write access onto SquidGuard
     configuration file and the dbhome directory. It must also have read
     rights onto the log file. If you use the SquidClamav Manager GUI it also
-    need read/write access on the squidclamav.conf file as well as the log
-    file.
+    requires read/write access to the squidclamav.conf file as well as the
+    log file.
 
     For that reason SquidGuard Manager must be run as the user under which
     SquidGuard and SquidClamav are run. Most of the time this is the Squid
@@ -144,11 +144,11 @@ INSTALLATION
 
     IMPORTANT: SquidGuard Manager doesn't support symbolic links in the
     SquidGuard dbhome directory. If it is your case, you need to remove
-    those symbolic links and modify your squidguard.conf file so that points
-    the real files and directories.
+    those symbolic links and modify your squidguard.conf file so that refers
+    to the real files and directories.
 
   Automatic installation
-    Execute the install script and answer to some questions it ask:
+    Execute the install script and answer to some questions it asks:
 
             $ perl Makefile.PL
             $ make
@@ -187,7 +187,7 @@ INSTALLATION
 
     For packaging there's two more configuration variables:
 
-            DESTDIR => Directory prefix wher install will be done
+            DESTDIR => Directory prefix where install will be done
             QUIET => Do not display the post install message
 
     Example:
@@ -210,13 +210,14 @@ INSTALLATION
     This will install SquidGuard Manager CGI squidguardmgr.cgi,
     squidguardmgr.conf, squid_wrapper and all language files under
     /usr/local/apache/cgi-bin/admin/. All SquidGuard Manager css, js and
-    images files will be copied under the directory
+    image files will be copied under the directory
     /usr/local/apache/htdocs/admin/. Squidguard Manager will expect to find
     the SquidGuard configuration file at /usr/local/etc/squidguard.conf and
     the log and SquidGuard databases respectively at
     /usr/local/logs/squidguard and /usr/local/squidguard/db. All the
     installed files will be owned by user squid and group squid. The squid
-    wrapper (use to reconfigure squid after change) will be setuid root.
+    wrapper (used to reconfigure squid after change) will be setuid root
+    unconditionally.
 
   Manual installation
     Copy all files from the cgi-bin repository into the CGI script directory
@@ -228,12 +229,12 @@ INSTALLATION
     directory or any other subdirectory and check that they can be read by
     your httpd server.
 
-    Edit the squidguardmgr.conf file into your cgi directory and check that
+    Edit the squidguardmgr.conf file in your cgi directory and check that
     all paths conforms to your installation.
 
     If you want to be able to reload Squid redirector from the GUI interface
     after your SquidGuard and/or SquidClamav modification, you must compile
-    and install the squid_wrapper with suid root into the squidguardmgr.cgi
+    and install the squid_wrapper with suid root into the squidguardmgr cgi
     directory.
 
     Before compilation you may need to edit squid_wrapper.c and change the
@@ -274,7 +275,7 @@ CONFIGURATION
         Path to the SquidClamav configuration file.
 
     LANG en_US
-        Used to set the language, default is en_US. Current available LANGS
+        Used to set the language, default is en_US. Current available LANGs
         are: en_US, fr_FR.
 
     SQUID_WRAPPER /var/www/squidguargmgr/squid_wrapper
@@ -314,7 +315,7 @@ CONFIGURATION
 AUTHORS
     Gilles Darold <gilles @nospam@ darold.net>
 
-    Tatsuya Nonogaki <winfield @nospam@support.email.ne.jp>
+    Tatsuya Nonogaki <winfield @nospam@ support.email.ne.jp>
 
 COPYRIGHT
     Copyright (c) 2010-2013 Gilles Darold - All rights reserved.
@@ -333,6 +334,6 @@ COPYRIGHT
             along with this program.  If not, see < http://www.gnu.org/licenses/ >.
 
 BUGS
-    Your volonteer to help construct a better software by submitting bug
+    Your volunteer to help construct a better software by submitting bug
     report or feature request as well as code contribution are welcome.
 
